--- a/src/app/views/adminViews/dashboard/dashboard.component.html
+++ b/src/app/views/adminViews/dashboard/dashboard.component.html
@@ -1,3 +1,14 @@
-<p>
-  dashboard works!
-</p>
+<div>
+    <ng-container *ngFor="let sub of questionsToDisplay.subject;let k = index">
+  <h1>{{sub.name}}</h1>
+  <h1>{{sub.section.name}}</h1>
+  <ng-container *ngFor="let item of getRandomArr(sub.section.content);let i = index">
+    <p><b>{{i+1 + '. ' + item.question}}</b></p>
+    <ng-container *ngIf="item.pattern === 'multiple'">
+      <ng-container *ngFor="let option of item.options; let j = index">
+        <p> {{ j+1 + '. ' + option}} </p>
+      </ng-container>
+    </ng-container>
+  </ng-container>
+  </ng-container>
+</div>
